# vantago

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: build-test.yml
data/raw/aeb-small-100/: MANIFEST.txt  README.md
src/vantago/: __init__.py  comparison.py  final_evaluation.py  qualitative.py  qualitative_constants.py
src/vantago/baselines/: __init__.py  evaluation.py  mlp.py
src/vantago/cli/: __init__.py  main.py
src/vantago/cli/commands/: compare_policy_models.py  evaluate_baselines.py  evaluate_cnn_policy.py  fetch_aeb_games.py  final_evaluation_report.py  inspect_dataset.py  inspect_sgf.py  prepare_aeb_dataset.py  process_dataset.py  qualitative_analysis.py  replay_batch.py  split_dataset.py  train_cnn_policy.py  train_mlp_baseline.py
src/vantago/data/: __init__.py  aeb.py  artifacts.py  encoding.py  splits.py  torch_loading.py
src/vantago/evaluation/: __init__.py  metrics.py
src/vantago/models/: __init__.py  cnn.py
src/vantago/replay/: __init__.py  batch.py  diagnostics.py  replay.py
src/vantago/sgf/: __init__.py  sgf_parser.py
src/vantago/training/: __init__.py  cnn.py
tests/: test_aeb_fetch.py  test_aeb_small_corpus.py  test_baselines.py  test_cnn_policy.py  test_cnn_training.py  test_data_artifacts.py  test_data_encoding.py  test_dataset_splits.py  test_evaluation_metrics.py  test_final_evaluation.py  test_mlp_baseline.py  test_policy_comparison.py  test_qualitative_analysis.py  test_replay.py  test_replay_batch.py  test_replay_diagnostics.py  test_sgf_inspect_cli.py  test_sgf_parser.py  test_torch_loading.py
tests/fixtures/sgf/: known_good.sgf
