[project]
name = "vantago"
version = "0.1.0"
description = "Supervised Go policy model experiments from SGF game records."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "jonlave" },
]
dependencies = [
  "numpy>=2.0,<3",
  "sgfmill>=1.1.1,<2",
  "torch>=2.0,<3",
]

[project.scripts]
vantago = "vantago.cli.main:main"

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.0.0",
  "ruff>=0.14.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantago"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
